<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('leads', function (Blueprint $table) {
            $table->id();
            $table->foreignId('client_id')->constrained('users')->onDelete('cascade');
            $table->foreignId('pro_id')->nullable()->constrained('users')->onDelete('cascade');
            $table->string('subject');
            $table->text('description');
            $table->string('phone');
            $table->string('status')->default('pending'); // pending, accepted, rejected, completed
            $table->string('price')->nullable();
            $table->text('pro_notes')->nullable();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('leads');
    }
};
